--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react": "^18.3.1",
     "react-cropper": "^2.3.3",
     "react-dom": "^18.3.1",
+    "react-helmet-async": "^2.0.5",
     "react-redux": "^9.1.2",
     "react-router-dom": "^6.26.0",
     "react-spinners": "^0.14.1",
